messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: nginx 
  rules:
    - http:
      paths:
        - path: /api
          pathtype: Prefix
          backend:
            service:
              name: messaging-svc
              port: 
                number: 800
